--- a/internship project/login.html
+++ b/internship project/login.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./main.css" type="text/css" />
   </head>
   <body>
-    <div class="header">
-      <h1>Job Repository</h1>
-    </div>
+    <!-- header -->
+
+    <!-- login holder -->
     <div class="login-holder">
       <br />
       <div class="icon-holder">
