--- a/internship project/signup-user.html
+++ b/internship project/signup-user.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./main.css" type="text/css" />
   </head>
   <body>
-    <div class="header"><h1>Job Repository</h1></div>
+    <!-- header -->
+
+    <!-- signup holder -->
     <div class="signup-holder">
       <br />
 
@@ -28,14 +30,14 @@
           />
         </svg>
       </div>
-      <div class="option-btn-holder">
+      <!-- <div class="option-btn-holder">
         <a href="signup-user.html">
           <button class="normal-user-btn">Normal User</button>
         </a>
         <a href="signup-employer.html">
           <button class="employer-btn">Employer</button>
         </a>
-      </div>
+      </div> -->
       <form>
         <p>First Name</p>
         <input type="text" />
